# SLR_parser

./: CMakeLists.txt  Makefile  README.md
include/: grammar.hpp  parser.hpp  slr_table.hpp  token.hpp
lexer/: lexer.l
src/: main.cpp  parser.cpp  slr_table.cpp  tokens.cpp
tests/: test_parser.cpp
